force-app/main/default/objects/Notification_Assignment__c/Notification_Assignment__c.object-meta.xml
<CustomObject>
    <description>BA: NPLMA - Used to identify the mobile users/foreman that are assigned Mobile Notifications</description>
    <label>Notification Assignment</label>
    <nameField>
        <label>Notification Assignment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>