force-app/main/default/objects/Notification_Assignment__c/fields/Acknowledgment_Required__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Required__c</fullName>
    <description>BA: NPLMA - Displays is acknowledgement is required</description>
    <formula>Mobile_Notification__r.Acknowledgment_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acknowledgment Required?</label>
    <type>Checkbox</type>
</CustomField>