force-app/main/default/objects/Notification_Assignment__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BA: NPLMA - Tracks what resource the notification is assigned to</description>
    <label>Assigned To</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Notification Assignments</relationshipLabel>
    <relationshipName>Notification_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>