force-app/main/default/objects/Notification_Assignment__c/fields/Assigned_to_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Current_User__c</fullName>
    <formula>IF( $User.Id =  Assigned_To__r.RelatedRecordId, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Current User</label>
    <type>Checkbox</type>
</CustomField>