force-app/main/default/objects/Notification_Assignment__c/fields/Assigned_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Name__c</fullName>
    <description>BA: NPLMA - Used in assignment flow to display service resource name</description>
    <formula>Assigned_To__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Name</label>
    <type>Text</type>
</CustomField>