force-app/main/default/objects/Notification_Assignment__c/fields/Completed_On_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_On_Time__c</fullName>
    <description>BA: NPLMA - Determines if mobile user completed assignment before due date</description>
    <formula>IF(Date_Completed__c  &gt;  Mobile_Notification__r.Due_Date__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed On Time?</label>
    <type>Checkbox</type>
</CustomField>