force-app/main/default/objects/Notification_Assignment__c/fields/Copy_Files_Counter__c.field-meta.xml
<CustomField>
    <fullName>Copy_Files_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>26161</description>
    <label>Copy Files Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>