force-app/main/default/objects/Notification_Assignment__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <description>BA: NPLMA - Captures the date the mobile user completes notification</description>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>