force-app/main/default/objects/Notification_Assignment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>BA: NPLMA - Displays description on assignment record from notification record</description>
    <formula>Mobile_Notification__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>