force-app/main/default/objects/Notification_Assignment__c/fields/File_Share_TBD__c.field-meta.xml
<CustomField>
    <fullName>File_Share_TBD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>26161</description>
    <label>File Share TBD</label>
    <type>Checkbox</type>
</CustomField>