force-app/main/default/objects/Notification_Assignment__c/fields/Flow_Interview_ID__c.field-meta.xml
<CustomField>
    <fullName>Flow_Interview_ID__c</fullName>
    <description>26161</description>
    <label>Flow Interview ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>