force-app/main/default/objects/Notification_Assignment__c/fields/Increase_Counter_Flag__c.field-meta.xml
<CustomField>
    <fullName>Increase_Counter_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>26161</description>
    <label>Increase Counter Flag</label>
    <type>Checkbox</type>
</CustomField>