force-app/main/default/objects/Notification_Assignment__c/fields/Last_Notified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Notified_Date__c</fullName>
    <description>BA: NPLMA - Identifies last time notification has been sent to user</description>
    <label>Last Notified Date</label>
    <type>Date</type>
</CustomField>