force-app/main/default/objects/Notification_Assignment__c/fields/Mobile_Notification__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Notification__c</fullName>
    <label>Mobile Notification</label>
    <referenceTo>Mobile_Notification__c</referenceTo>
    <relationshipLabel>Notification Assignments</relationshipLabel>
    <relationshipName>Notification_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>