force-app/main/default/objects/Notification_Assignment__c/fields/Number_of_Notifications_Sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Notifications_Sent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>BA: NPLMA - Displays number of notifications sent to user for each assignment</description>
    <label>Number of Notifications Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>