force-app/main/default/objects/Notification_Assignment__c/fields/SFS_User_Active__c.field-meta.xml
<CustomField>
    <fullName>SFS_User_Active__c</fullName>
    <description>28083 Field to enable reports to be filtered by Active users</description>
    <formula>Assigned_To__r.RelatedRecord.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the Assigned To User&apos;s Active status</inlineHelpText>
    <label>SFS User Active</label>
    <type>Checkbox</type>
</CustomField>