force-app/main/default/objects/Notification_Assignment__c/fields/Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Signature_Required__c</fullName>
    <description>25681</description>
    <formula>Mobile_Notification__r.Signature_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Required?</label>
    <type>Checkbox</type>
</CustomField>