force-app/main/default/objects/Notification_Assignment__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>26161</description>
    <formula>TEXT(Mobile_Notification__r.Sub_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Category</label>
    <type>Text</type>
</CustomField>