force-app/main/default/objects/Notification_Assignment__c/fields/Toolbox_Talk_Area__c.field-meta.xml
<CustomField>
    <fullName>Toolbox_Talk_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>25681</description>
    <label>Toolbox Talk Area</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Notification Assignments</relationshipLabel>
    <relationshipName>Notification_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>