force-app/main/default/objects/Notification_Assignment__c/fields/Toolbox_Talk_Delivered_By__c.field-meta.xml
<CustomField>
    <fullName>Toolbox_Talk_Delivered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>25681</description>
    <label>Toolbox Talk Delivered By</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Notification Assignments (Toolbox Talk Delivered By)</relationshipLabel>
    <relationshipName>Notification_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>