force-app/main/default/objects/Notification_Assignment__c/listViews/My_Incomplete_Assignments.listView-meta.xml
<ListView>
    <fullName>My_Incomplete_Assignments</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>My Incomplete Assignments</label>
    <sharedTo>
        <group>SFS_Users</group>
    </sharedTo>
</ListView>